updated the about area and added a photo, need to link my github, resume, and portfolio also change the pictures in the portfolio area to correspond with my github.

--- a/me/index.html
+++ b/me/index.html
@@ -103,7 +103,7 @@
               <div class="row">
                 <div class="col-lg-6">
                   <h1 class="text-black">I'm Jin Kim</h1>
-                  <p class="lead">I'm Web Developer Based on Los Angeles</p>
+                  <p class="lead">I am a Full Stack Web Developer</p>
                   <p>
                     <a
                       href="#portfolio-section"
@@ -177,24 +177,6 @@
                 </div>
               </div>
             </div>
-
-            <div class="col-md-6 mb-4">
-              <div class="service d-flex h-100">
-                <div class="service-number mr-4">
-                  <span class="icon-layers"></span>
-                </div>
-                <div class="service-about">
-                  <h3>Web Design</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Perferendis ipsum error eligendi molestiae eaque quas,
-                    ducimus sequi excepturi?
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
 
       <div class="site-section" id="about-section">
@@ -204,36 +186,26 @@
               <h2 class="section-title">About Me</h2>
             </div>
             <div class="col-lg-4 order-1 order-lg-2 mb-4 mb-lg-0">
-              <div class="bg-light pt-5">
-                <img src="images/face.png" alt="Image" class="img-fluid" />
+              <div>
+                <img src="images/face.jpg" alt="Image" class="img-fluid" />
               </div>
             </div>
             <div class="col-lg-4 order-2 order-lg-1">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Perferendis ipsum error eligendi molestiae eaque quas, ducimus
-                sequi excepturi?
+                Full Stack Web Developer based in Los Angeles. Always eager to learn new information about the developing world of coding.
+                Out-going and motivated learner as well as being able to look at things in different perspective.
               </p>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Perferendis ipsum error eligendi molestiae eaque quas, ducimus
-                sequi excepturi?
+                Effectively work in areas that require strong team spirit, communication skills, and customer-focused experiences. Able to critically and creatively analyze problems.
               </p>
             </div>
             <div class="col-lg-4 order-3 order-lg-3">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Perferendis ipsum error eligendi molestiae eaque quas, ducimus
-                sequi excepturi?
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad
-                aperiam qui maiores, ipsa quibusdam distinctio! Expedita ipsum
-                ex porro obcaecati.
+                Known as hardworking among co-workers and possess the motivation to always learn something new. Written and oral fluency in Korean.
               </p>
               <p>
                 <a href="#contact-section" class="btn smoothscroll btn-primary"
-                  >Contact Me</a
+                  >Resume</a
                 >
               </p>
             </div>
