--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 Known as hardworking among co-workers and possess the motivation to always learn something new. Written and oral fluency in Korean.
               </p>
               <p>
-                <a href="#contact-section" class="btn smoothscroll btn-primary"
+                <a href="https://docs.google.com/document/d/1H5jsXoDFW0i929Vralf3M2H27PySak2702jkPamkFfk/edit" class="btn smoothscroll btn-primary"
                   >Resume</a
                 >
               </p>
@@ -225,80 +225,26 @@
             <div
               class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4"
             >
-              <a href="images/post_2.jpg" class="item-wrap fancybox">
+              <a href="https://justin8837.github.io/Fire-Tracker/">
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/post_2.jpg" />
+                <img class="img-fluid" src="images/firetracker.png" />
               </a>
             </div>
-            <div
-              class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4"
-            >
-              <a href="images/post_3.jpg" class="item-wrap fancybox">
-                <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/post_3.jpg" />
-              </a>
-            </div>
-
-            <div
-              class="item brand col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4"
-            >
-              <a href="images/post_4.jpg" class="item-wrap fancybox">
-                <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/post_4.jpg" />
-              </a>
-            </div>
-
             <div
               class="item design col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4"
             >
-              <a href="images/post_5.jpg" class="item-wrap fancybox">
+              <a href="https://cheqmate.herokuapp.com/">
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/post_5.jpg" />
+                <img class="img-fluid" src="images/CheqMate.png" />
               </a>
             </div>
 
             <div
               class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4"
             >
-              <a href="images/post_6.jpg" class="item-wrap fancybox">
+              <a href="https://ruya-world.herokuapp.com/">
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/post_6.jpg" />
-              </a>
-            </div>
-
-            <div
-              class="item brand col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4"
-            >
-              <a href="images/post_2.jpg" class="item-wrap fancybox">
-                <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/post_2.jpg" />
-              </a>
-            </div>
-
-            <div
-              class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4"
-            >
-              <a href="images/post_3.jpg" class="item-wrap fancybox">
-                <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/post_3.jpg" />
-              </a>
-            </div>
-
-            <div
-              class="item design col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4"
-            >
-              <a href="images/post_4.jpg" class="item-wrap fancybox">
-                <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/post_4.jpg" />
-              </a>
-            </div>
-
-            <div
-              class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4"
-            >
-              <a href="images/post_6.jpg" class="item-wrap fancybox">
-                <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/post_6.jpg" />
+                <img class="img-fluid" src="images/Ruya.png" />
               </a>
             </div>
           </div>
@@ -385,7 +331,7 @@
                   <ul class="list-unstyled">
                     <li><a href="#">GitHub</a></li>
                     <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Resume</a></li>
+                    <li><a href="https://docs.google.com/document/d/1H5jsXoDFW0i929Vralf3M2H27PySak2702jkPamkFfk/edit">Resume</a></li>
                   </ul>
                 </div>
               </div>
