finished on final touches for now

--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
                 <div class="col-lg-4">
                   <h3 class="footer-title">Links</h3>
                   <ul class="list-unstyled">
-                    <li><a href="#">GitHub</a></li>
-                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="https://github.com/justin8837">GitHub</a></li>
+                    <li><a href="#portfolio-section">Portfolio</a></li>
                     <li><a href="https://docs.google.com/document/d/1H5jsXoDFW0i929Vralf3M2H27PySak2702jkPamkFfk/edit">Resume</a></li>
                   </ul>
                 </div>
