Finshed reworking and adding buttons to redirect the page to the resume,linkedin, and github still working on the areas for the project

--- a/index.html
+++ b/index.html
@@ -105,12 +105,27 @@
                   <h1 class="text-black">I'm Jin Kim</h1>
                   <p class="lead">I am a Full Stack Web Developer</p>
                   <p>
+                    <a href="https://docs.google.com/document/d/1H5jsXoDFW0i929Vralf3M2H27PySak2702jkPamkFfk/edit" class="btn smoothscroll btn-primary"
+                      >Resume</a
+                    >
+                  </p>
+                  <p>
                     <a
                       href="#portfolio-section"
                       class="btn smoothscroll btn-primary"
                       >Portfolio</a
                     >
                   </p>
+                  <p>
+                    <a href="https://linkedin.com/in/jindkim"
+                    class="btn smoothscroll btn-primary">
+                    LinkedIn
+                  </a>
+                  </p>
+                  <p><a href="https://github.com/justin8837"
+                  class="btn smoothscroll btn-primary">
+                  GitHub
+                </a></p>
                 </div>
               </div>
             </div>
@@ -146,18 +161,31 @@
                 </div>
               </div>
             </div>
-
             <div class="col-md-6 mb-4">
               <div class="service d-flex h-100">
                 <div class="service-number mr-4">
                   <span class="icon-style"></span>
                 </div>
                 <div class="service-about">
-                  <h3>Front end</h3>
+                  <h3>CSS</h3>
                   <p>
-                    Experiences and proficiency in React and CSS with some
-                    knowledge in React Native. Able to utilize different types
-                    of CSS templates such as bootstrap and materialize.
+                    Experiences and proficiency in CSS to format and design a website to meet the requirements for projects.
+                    Able to utilize other sources such as bootstrap and all the components in CSS.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 mb-4">
+              <div class="service d-flex h-100">
+                <div class="service-number mr-4">
+                  <span class="icon-style"></span>
+                </div>
+                <div class="service-about">
+                  <h3>React</h3>
+                  <p>
+                    Experiences and proficiency in React with some knowledge in React Native as well.
+                    Able to utilize the components in React to build a fully functional and great looking 
+                    front end.
                   </p>
                 </div>
               </div>
@@ -169,16 +197,27 @@
                   <span class="icon-business_center"></span>
                 </div>
                 <div class="service-about">
-                  <h3>Back End</h3>
+                  <h3>Node</h3>
                   <p>
-                    Experienced in utilizing mongo, node, and sequel to connect
-                    the server-side backend to the front.
+                    Experienced in using NodeJS to create and build a back end application for a full stack projects.
                   </p>
                 </div>
               </div>
             </div>
       </div>
-
+      <div class="col-md-6 mb-4">
+        <div class="service d-flex h-100">
+          <div class="service-number mr-4">
+            <span class="icon-style"></span>
+          </div>
+          <div class="service-about">
+            <h3>JavaScript</h3>
+            <p>
+              Experience and proficiency in JavaScript language to build a fully functional website in short amount of time.
+            </p>
+          </div>
+        </div>
+      </div>
       <div class="site-section" id="about-section">
         <div class="container">
           <div class="row">
@@ -203,11 +242,6 @@
               <p>
                 Known as hardworking among co-workers and possess the motivation to always learn something new. Written and oral fluency in Korean.
               </p>
-              <p>
-                <a href="https://docs.google.com/document/d/1H5jsXoDFW0i929Vralf3M2H27PySak2702jkPamkFfk/edit" class="btn smoothscroll btn-primary"
-                  >Resume</a
-                >
-              </p>
             </div>
           </div>
         </div>
@@ -220,8 +254,8 @@
               <h2 class="section-title text-center mb-5">My Portfolio</h2>
             </div>
           </div>
-
-          <div id="posts" class="row no-gutter">
+<!-- class="row no-gutter" -->
+          <div id="posts" >
             <div
               class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4"
             >
@@ -229,7 +263,19 @@
                 <span class="icon-search2"></span>
                 <img class="img-fluid" src="images/firetracker.png" />
               </a>
+              <div class="mb-6">
+                <div class="service d-flex h-100">
+                  <div class="service-about">
+                    <h3>Node</h3>
+                    <p>
+                      Fire tracking app that pulls up news articles about the fire near the location that was searched in the search box. Used node, javascript, CSS, and 3 different APIs together.
+                      https://justin8837.github.io/Fire-Tracker/
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
+            
             <div
               class="item design col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4"
             >
@@ -251,8 +297,7 @@
         </div>
       </section>
 
-      
-      <section class="site-section" id="contact-section">
+      <!-- <section class="site-section" id="contact-section">
         <div class="container">
           <div class="row">
             <div class="col-12 mb-5 position-relative">
@@ -321,7 +366,7 @@
             </div>
           </form>
         </div>
-      </section>
+      </section> -->
 
       <footer class="site-section bg-light footer">
         <div class="container">
