Almost finished with the project area just need to add more information about the project.

--- a/index.html
+++ b/index.html
@@ -283,6 +283,18 @@
                 <span class="icon-search2"></span>
                 <img class="img-fluid" src="images/CheqMate.png" />
               </a>
+              <div class="mb-6">
+                <div class="service d-flex h-100">
+                  <div class="service-about">
+                    <h3>CheqMate</h3>
+                    <p>
+                      Application made to bring big company technologies to smaller companies for cheaper and easier.
+                      Used mostly React and React Native with fully functional backend database with AWS.
+                      https://github.com/JordanCley/cheqmate
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
 
             <div
@@ -292,6 +304,19 @@
                 <span class="icon-search2"></span>
                 <img class="img-fluid" src="images/Ruya.png" />
               </a>
+              <div class="mb-6">
+                <div class="service d-flex h-100">
+                  <div class="service-about">
+                    <h3>CheqMate</h3>
+                    <p>
+                      Application made to bring big company technologies to smaller companies for cheaper and easier.
+                      Used mostly React and React Native with fully functional backend database with AWS.
+                      https://github.com/JordanCley/cheqmate
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
             </div>
           </div>
         </div>
