Finished with the project area, seems like css needs more improvements in the future.

--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
           <div class="row mb-5">
             <div class="col-12 position-relative">
               <h2 class="section-title text-center mb-5">My Portfolio</h2>
+              <h6 class="section-title text-center mb-5">Clicking on the image will redirect you to the page</h1>
             </div>
           </div>
 <!-- class="row no-gutter" -->
@@ -307,10 +308,11 @@
               <div class="mb-6">
                 <div class="service d-flex h-100">
                   <div class="service-about">
-                    <h3>CheqMate</h3>
+                    <h3>Ruya</h3>
                     <p>
-                      Application made to bring big company technologies to smaller companies for cheaper and easier.
-                      Used mostly React and React Native with fully functional backend database with AWS.
+                      A website that allows the user to compare and contrast different stock prices within different time-frame. 
+                      APIs from different credible sources to pull up data. 
+                      password: spidre
                       https://github.com/JordanCley/cheqmate
                     </p>
                   </div>
